--- a/src/encoded/static/scss/style.scss
+++ b/src/encoded/static/scss/style.scss
@@ -44,4 +44,5 @@
         "encoded/modules/slide-in-pane",
         "encoded/modules/common-visualization-detail-pane",
         "encoded/modules/pedigree-visualization",
-        "encoded/modules/workflow-visualization";
+        "encoded/modules/workflow-visualization",
+        "encoded/modules/case-submission";
