--- a/src/encoded/static/scss/encoded/modules/_case-submission.scss
+++ b/src/encoded/static/scss/encoded/modules/_case-submission.scss
@@ -9,24 +9,37 @@ body[data-current-action="add"] {
         .panel-selection {
             display: flex;
             margin-top: 30px;
+
+            @include media-breakpoint-down(md){
+                flex-direction: column;
+            }
             
 
             > .panel-menu-item {
                 flex: 1 1 auto;
-                min-height: 60px;
                 padding: 0 10px;
                 background-color: #f4f4f4;
 
-                &:first-child {
-                    border-radius: 25px 0 0 25px;
-                }
-
-                &:last-child {
-                    border-radius: 0 25px 25px 0;
+                @include media-breakpoint-up(lg){
+                    border: 1px solid #eee;
+                    &:not(:first-child) {
+                        border-left-color: #ddd;
+                    }
+                    &:not(:last-child) {
+                        border-right: none;
+                    }
+    
+                    &:first-child {
+                        border-radius: 35px 0 0 35px;
+                    }
+    
+                    &:last-child {
+                        border-radius: 0 35px 35px 0;
+                    }
                 }
 
                 @include media-breakpoint-down(md){
-                    flex-direction: column;
+
                     &:first-child {
                         border-radius: 10px 10px 0 0;
                     }
@@ -34,10 +47,6 @@ body[data-current-action="add"] {
                     &:last-child {
                         border-radius: 0 0 10px 10px;
                     }
-                }
-
-                &:not(:last-child){
-                    border-right: 1px solid #ddd;
                 }
 
                 &:not(.disabled):not([disabled]) {
@@ -48,6 +57,7 @@ body[data-current-action="add"] {
                     flex-wrap: nowrap;
                     align-items: center;
                     height: 100%;
+                    min-height: 70px;
                     > .number-indicator {
                         font-size: 2rem;
                         font-weight: 600;
@@ -59,8 +69,9 @@ body[data-current-action="add"] {
                             height: 50px;
                             width: 50px;
                             border: 1px solid transparent;
-                            background-color: #ffe714;
+                            background-color: #d89923;
                             border-radius: 50%;
+                            color: #fff;
                         }
                     }
                 }
@@ -75,7 +86,8 @@ body[data-current-action="add"] {
                 &.completed {
                     //background-color: #fff;
                     > .row > .number-indicator > span {
-                        background-color: #98ec64;
+                        //background-color: #98ec64;
+                        background-color: $brand-success;
                     }
                 }
 
@@ -83,8 +95,8 @@ body[data-current-action="add"] {
                     > .row {
                         opacity: 0.5;
                         > .number-indicator > span {
-                            border: 1px dashed #ddd;
-                            background-color: transparent;
+                            border: 1px dashed #0004;
+                            background-color: #b7b7b7;
                         }
                     }
                 }
