--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1901,41 +1901,49 @@ $badge-item-min-height: 90px;
 			margin-bottom: 10px;
 		}
 
-		table.processing-summary-table {
+		.processing-summary-table-container {
 
-			margin-top: 10px;
-			width: 100%;
+			overflow-x: auto;
+			-webkit-overflow-scrolling: touch;
 
-			tbody {
-				tr {
-					td {
-						padding: 4px 8px;
-						/*
-						&[data-for-column="individual"],
-						&[data-for-column="sample"] {
-							font-family: $font-family-monospace;
+			table.processing-summary-table {
+
+				margin-top: 10px;
+				min-width: 640px;
+				width: 100%;
+
+				tbody {
+					tr {
+						td {
+							padding: 4px 8px;
+							/*
+							&[data-for-column="individual"],
+							&[data-for-column="sample"] {
+								font-family: $font-family-monospace;
+							}
+							*/
 						}
-						*/
-					}
-					&.is-proband {
-						> td {
-							background-color: #ebf6ff;
-							&:first-child {
-								font-weight: 600;
+						&.is-proband {
+							> td {
+								background-color: #ebf6ff;
+								&:first-child {
+									font-weight: 600;
+								}
+							}
+						}
+						&[data-sample-index="0"] {
+							> td {
+								border-top: 1px solid #f8f8f8;
+							}
+						}
+						&:not([data-sample-index="0"]) {
+							> td[data-for-column="individual"] {
+								visibility: hidden;
 							}
 						}
 					}
-					&[data-sample-index="0"] {
-						> td {
-							border-top: 1px solid #f8f8f8;
-						}
-					}
-					&:not([data-sample-index="0"]) {
-						> td[data-for-column="individual"] {
-							visibility: hidden;
-						}
-					}
 				}
+
 			}
 
 		}
