NavBar -> Hide "Cases", other UI styling

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -490,8 +490,7 @@
 			margin-bottom: 3px;
 			> .row {
 				align-items: center;
-				> .col,
-				> .col-auto {
+				> div:first-child { // Title
 					overflow-x: hidden;
 					text-overflow: ellipsis;
 					white-space: nowrap;
