--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -297,21 +297,33 @@ $tabbar-height: 46px;
 		height: calc(100vh - 135px);
 		.error-msg-container {
 			width: 100%;
-			border: 1px solid #6b0101;
-			color: #6b0101;
-			padding-top: 18px;
-			padding-bottom: 18px;
-			padding-left: 20px;
-			padding-right: 20px;
-			align-items: center;
-			> i.icon-times {
-				color: inherit;
-				width: 2.5rem;
-				font-size: 1.5rem;
-			}
-			> h4 {
-				color: inherit;
-			}
+		}
+	}
+}
+
+/** Usually a child of error-boundary-container (above) but not necessarily **/
+.error-msg-container {
+	border: 1px solid #6b0101;
+	color: #6b0101;
+	padding-top: 18px;
+	padding-bottom: 18px;
+	padding-left: 20px;
+	padding-right: 20px;
+	align-items: center;
+	border-radius: 10px;
+	&.row {
+		margin-left: 0;
+		margin-right: 0;
+	}
+	> i.icon-times {
+		color: inherit;
+		width: 2.5rem;
+		font-size: 1.5rem;
+	}
+	> .title-wrapper {
+		color: inherit;
+		> * {
+			color: inherit;
 		}
 	}
 }
