Search.py edits for stats/range faceting

--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -81,6 +81,7 @@ $search-results-above-results-row-height: 42px;
 
 /*** FACETS CONTAINER STICKY ***/
 
+$facetlist-selected-term-color: $brand-primary;
 $facetlist-omitted-term-color: #901414;
 
 @import "../../../../../../node_modules/@hms-dbmi-bgm/shared-portal-components/scss/facet-list.scss";
