italicize if in review

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1791,6 +1791,9 @@ $badge-item-min-height: 90px;
 									border: none;
 								}
 							}
+							a.qc-status-in-review {
+								font-style: italic;
+								}
 						}
 					}
 				}
