--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1,4 +1,4 @@
-/***********************************************************
+Cohort/***********************************************************
 Custom Classes & Styling for Item Pages (e.g. Experiment Sets)
 ************************************************************/
 
@@ -124,7 +124,7 @@ $tabbar-bg-color : #ececec !default;
 $tabbar-text-color : #333 !default;
 $tabbar-text-active-color: #000 !default;
 $tabbar-bg-active-color: #fff !default;
-// If override this, check e.g. CaseView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
+// If override this, check e.g. CohortView Pedigree Tab height dimensioning (JS) since this 46px is accounted for in calculations
 $tabbar-height: 46px;
 
 .item-page-container {
@@ -359,7 +359,7 @@ $tabbar-height: 46px;
                 padding: 12px 18px;
                 border-bottom: 1px solid #ccc;
                 box-shadow: inset 0 -2px 5px -5px #000;
-                
+
                 label {
                     font-weight: 400;
                     margin-bottom: 1px;
@@ -419,7 +419,7 @@ $tabbar-height: 46px;
 					}
 				}
 			}
-			
+
         }
     }
 }
@@ -1717,7 +1717,7 @@ $badge-item-min-height: 90px;
 
 
 /**********************************************************
-			Processing Summary Table (CaseView)
+			Processing Summary Table (CohortView)
 **********************************************************/
 
 .item-page-container {
