Test/Import ActiveFiltersBar from SPC

--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -268,29 +268,10 @@ $search-page-padding-resize-transition-out: padding .25s linear;
 }
 
 
+/********************************/
+/****** Active Filters Bar ******/
+/********************************/
 
+@import "../../../../../../node_modules/@hms-dbmi-bgm/shared-portal-components/scss/active-filters-bar.scss"
 
-
-/********
-COMMON SEARCH TABLE
-*********/
-
-// Outer Wrapper
-// Inner stuff (cell, row styling, etc.) is located in _tables.scss
-
-.browse-page-container {
-	margin-top: 40px;
-	&.search-page-container {
-		margin-top: 0px;
-    }
-    background-color: #fff;
-    //background-color: rgba(255,255,255,0.9);
-}
-
-
-.batch-files-download-modal {
-    > .modal-dialog {
-        min-width: 75%;
-    }
-}
 
