--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -98,7 +98,7 @@ $pedigree-disease-colors :
         // Center viz area
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: start;
 
         // For iOS to scroll smoothly horizontally
         -webkit-overflow-scrolling: touch;
@@ -107,6 +107,7 @@ $pedigree-disease-colors :
         > .viz-area {
             position: relative;
             transform-origin: 0 0;
+            transform: scale3d(1,1,1);
 
             > .individuals-layer {
                 position: relative;
@@ -347,8 +348,33 @@ $pedigree-disease-colors :
             }
     
         }
+    }
 
-
+    > .zoom-controls-container {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        > .zoom-buttons-row {
+            display: flex;
+            align-items: center;
+            width: 36px;
+            > .zoom-btn {
+                border: 1px solid #999;
+                background-color: #fff;
+                box-sizing: content-box;
+                flex: 1;
+                text-align: center;
+                padding: 1px 4px;
+                &.zoom-out { // Left btn
+                    border-radius: 5px 0 0 5px;
+                    border-right-color: #ddd;
+                }
+                &.zoom-in { // Right btn
+                    border-radius: 0 5px 5px 0;
+                    border-left: none;
+                }
+            }
+        }
     }
 
 }
