Slider, improvements, cleanup, docs/comments

--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -310,11 +310,17 @@ $pedigree-disease-colors :
                                     /* font-size: 1em; */
                                     font-size: 1.0725em;
                                     font-weight: 700;
+                                    -webkit-touch-callout: none; /* iOS Safari */
+                                    -webkit-user-select: none; /* Safari */
+                                    -khtml-user-select: none; /* Konqueror HTML */
+                                    -moz-user-select: none; /* Old versions of Firefox */
+                                    -ms-user-select: none; /* Internet Explorer/Edge */
+                                    user-select: none; /* Non-prefixed version, currently */
                                 }
                             }
                         }
                     }
-    
+
                 }
     
                 > .individuals-edge-shape-layer {
@@ -358,41 +364,67 @@ $pedigree-disease-colors :
 
     > .zoom-controls-container {
         position: absolute;
-        top: 5px;
-        left: 5px;
+        top: 8px;
+        left: 8px;
         > .zoom-buttons-row {
             display: flex;
             align-items: center;
-            > .zoom-btn {
-                border: 1px solid #999;
-                color: #555;
-                background-color: #fff;
+            > .zoom-btn,
+            > .zoom-value {
                 box-sizing: content-box;
                 text-align: center;
                 padding: 1px 4px;
-                width: 18px;
+                height: 25px;
+                color: #555;
+                background-color: #fff;
+            }
+            > .zoom-btn {
+                border: 1px solid #999;
+                width: 24px;
 
                 &.zoom-out { // Left btn
                     border-radius: 5px 0 0 5px;
-                    border-right: none;
+                    border-right-color: #ddd !important;
                 }
                 &.zoom-in { // Right btn
                     border-radius: 0 5px 5px 0;
-                    border-left-color : #ddd;
+                    border-left-color : #ddd !important;
                 }
 
                 &:disabled {
                     color: #999;
                 }
-                &:hover:not(:disabled) {
+                &:hover:not(:disabled),
+                &:focus, &:active {
                     color: #000;
                     border-color: #555;
-                    &.zoom-out + .zoom-btn,
-                    &.zoom-in {
-                        border-left-color: #aaa;
-                    }
+                    outline: none;
                 }
-                
+                &:focus, &:active {
+                    box-shadow: inset 0px 0px 2px 0px #333;
+                }
+            }
+            > .zoom-value {
+                border-top: 1px solid #999999;
+                border-bottom: 1px solid #999999;
+                width: 36px;
+                font-size: 0.875em;
+                line-height: 25px;
+                white-space: nowrap;
+                text-align: right;
+            }
+        }
+        > .zoom-slider {
+            width: 112px;
+            padding-top: 3px;
+            > input[type="range"] {
+                width: inherit;
+                // If we want to make it vertical later:
+                //&[orient="vertical"] {
+                //    writing-mode: bt-lr; /* IE */
+                //    -webkit-appearance: slider-vertical; /* WebKit */
+                //    height: 120px;
+                //}
             }
         }
     }
