--- a/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
+++ b/src/encoded/static/scss/encoded/modules/_pedigree-visualization.scss
@@ -320,12 +320,7 @@ $pedigree-disease-colors :
                                     /* font-size: 1em; */
                                     font-size: 1.0725em;
                                     font-weight: 700;
-                                    -webkit-touch-callout: none; /* iOS Safari */
-                                    -webkit-user-select: none; /* Safari */
-                                    -khtml-user-select: none; /* Konqueror HTML */
-                                    -moz-user-select: none; /* Old versions of Firefox */
-                                    -ms-user-select: none; /* Internet Explorer/Edge */
-                                    user-select: none; /* Non-prefixed version, currently */
+                                    @extend .no-user-select;
                                 }
                             }
                         }
